# Zuralog

./: .gitattributes  .gitignore  .impeccable.md  AGENTS.md  CLAUDE.md  DEBUG-FLUTTER-WORKFLOW.md  DEBUG-FLUTTER.md  LICENSE  LICENSE.md  Makefile  README.md  SETUP.md  skills-lock.json  test_compilation.sh  today-mockup.html
cloud-brain/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  RAILWAY_ENV_VARS.md  docker-compose.yml  openapi.json  pyproject.toml  pyrightconfig.json  railway.celery-beat.toml  railway.celery-worker.toml  railway.toml
cloud-brain/alembic/: env.py
cloud-brain/alembic/versions/: 050d7af3bdcf_add_user_profile_fields.py  191778be138d_fix_users_schema.py  1cc35b5e3720_add_structured_dose_fields_to_user_.py  1d8d00104ded_merge_attachments_and_phase2.py  1dce1fca3cc9_initial_tables.py  360233678afc_add_user_goal_unique_constraint.py  (+67 more)
cloud-brain/app/: __init__.py  config.py  constants.py  database.py  limiter.py  main.py  worker.py
cloud-brain/docs/: railway-setup-guide.md
cloud-brain/scripts/: __init__.py  create_demo_auth_users.sql  export_openapi.py  seed_demo_data.py
cloud-brain/tests/: conftest.py  test_agent_response.py  test_analytics_api.py  test_auth.py  test_cache_service_async_lock.py  test_cache_service_lru.py  test_chat.py  test_chat_image_attachments.py  test_classifier.py  test_config_production_validation.py  test_config_secret_types.py  test_conversation_management.py  test_correlation_analyzer.py  test_daily_metrics_model.py  test_daily_summary_index.py  test_datetime_mapped_types.py  test_deduplication.py  test_deep_link_registry.py  test_delete_account.py  test_device_write_service.py  test_export_user_data.py  test_fitbit_rate_limiter.py  test_fitbit_routes.py  test_fitbit_sync.py  test_fitbit_token_service.py  test_fitbit_webhooks.py  test_get_current_user.py  test_goal_tracker.py  test_health.py  test_health_data_fk.py  test_health_data_models.py  test_health_ingest.py  test_ingest_cache_invalidation.py  test_ingest_max_items.py  test_ingest_source_validation.py  test_insight_generator.py  test_insight_model.py  test_integrations.py  test_integrations_server.py  test_llm_client.py  (+56 more)
(+1905 files in other folders)
